# lab5

./: CMakeLists.txt  README.md
.github/workflows/: actions.yml  cmake.yml  cmaketest.yml  f.yml  main.yml  mainn.yml
.githud/workflows/: main.yml
_build/: CMakeCache.txt
banking/: CMakeLists.txt
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world_application
solver_application/_build/: Makefile  cmake_install.cmake  solver_application
solver_lib/: CMakeLists.txt  solver.cpp
solver_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
tests/: test.cpp
